lisk-dex-electron/src/SignInModal.css
#sign-in-modal {
    position: absolute;
    z-index: 2;
    top: calc(50% - 295px);
    left: 25%;
    width: 50%;
    padding: 40px;
    background-color: rgb(27, 27, 27);
    height: 550px;
}

#sign-in-textarea {
    font-size: 20px;
    width: 100%;
    background-color: rgb(36, 35, 35);
    color: white;
    font-family: 'Courier New', Courier, monospace;
    margin-top: 10px;
    margin-bottom: 8px;
}

